[package]
name = "libfs_fat"
version = "0.1.0"
authors = ["Thog <me@thog.eu>"]
edition = "2018"

[dependencies]
libfs = { path = "../libfs" }
libfat = { path = "../libfat" }
storage_device = { path = "../storage_device" }
log = "0.4.6"
env_logger = {version = "0.6.0", optional = true }

[features]
binaries = ["env_logger"]

[[bin]]
name = "test_std"
path = "src/bin/test_std.rs"
required-features = ["binaries"]
